<resources>
    <string name="app_name" translatable="false">OAndBackupX</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backupConfirmation">Backup?</string>
    <string name="restoreConfirmation">Restore?</string>
    <string name="handleApk">APK</string>
    <string name="handleData">Data</string>
    <string name="handleBoth">Both</string>
    <string name="radioAll">All apps</string>
    <string name="radioUser">User Apps</string>
    <string name="radioSystem">System Apps</string>
    <string name="radioBoth">APK and Data</string>
    <string name="radioApk">APK</string>
    <string name="radioData">Data</string>
    <string name="radioSpecial">Special backups</string>
    <string name="de_selectAll">De/select all</string>
    <string name="onlyApkBackedUp">Only APK</string>
    <string name="onlyDataBackedUp">Only data</string>
    <string name="refresh">Refresh</string>
    <string name="batchbackup">Batch backup</string>
    <string name="batchrestore">Batch restore</string>
    <string name="search">Search</string>
    <string name="searchHint">Search for apps</string>
    <string name="deleteBackup">Delete backup</string>
    <string name="uninstall">Uninstall app</string>
    <string name="uninstallProgress">Uninstalling…</string>
    <string name="showOnlySystem">Only system apps</string>
    <string name="showOnlyUser">Only user apps</string>
    <string name="showNotBackedup">Apps without backup</string>
    <string name="showNotInstalled">Not installed apps</string>
    <string name="showNewAndUpdated">New and updated apps</string>
    <string name="showOldBackups">Old backups</string>
    <string name="showSplitAPKs">Split-APK</string>
    <string name="showOnlyApkBackedUp">Apps with only APK backed up</string>
    <string name="showOnlyDataBackedUp">Apps with only data backed up</string>
    <string name="sortByLabel">Sort by label</string>
    <string name="sortByPackageName">Sort by packagename</string>
    <string name="sort">Sort and filter</string>
    <string name="uninstallDialogMessage">Uninstall this app?</string>
    <string name="deleteBackupDialogMessage">Delete backup files?</string>
    <string name="dialogOK">Ok</string>
    <string name="dialogCancel">Cancel</string>
    <string name="dialogYes">Yes</string>
    <string name="dialogNo">No</string>
    <string name="restoreDataWithoutApkError">Cannot restore data without restoring APK, package is not installed</string>
    <string name="collectingData">Collecting package info…</string>
    <string name="suCheck">Checking for superuser and busybox…</string>
    <string name="noSu">Couldn\'t get superuser permissions</string>
    <string name="busyboxProblem">Couldn\'t find busybox. please check error log</string>
    <string name="mkfileError">Couldn\'t create</string>
    <string name="fallbackToDefault">Fall back to default</string>
    <string name="backupFolderError">Please set the correct path in preferences and ensure it exists or is createable</string>
    <string name="shellReturnSuccess">Success</string>
    <string name="shellReturnError">Error</string>
    <string name="backupProgress">Backing up…</string>
    <string name="backupSuccess">Backup complete</string>
    <string name="backupFailure">Error on backup</string>
    <string name="restoreProgress">Restoring…</string>
    <string name="restoreSuccess">Restore complete</string>
    <string name="restoreFailure">Error on restore</string>
    <string name="batchSuccess">Operation complete</string>
    <string name="batchFailure">Complete with errors</string>
    <string name="uninstallSuccess">Uninstall complete</string>
    <string name="uninstallFailure">Error on uninstall</string>
    <string name="errorDialogTitle">Errors occurred</string>
    <string name="customListTitle">Custom list</string>
    <string name="quickRebootTitle">Quick reboot</string>
    <string name="quickRebootMessage">Do you wish to restart userspace?</string>
    <string name="help_title">Help</string>
    <string name="notInstalledModeDataWarning">App cannot be restored from a backup without APK</string>
    <string name="shareTitle">Share</string>
    <string name="tools_title">Tools</string>
    <string name="batchDeleteMessage">Deleting backups…</string>
    <string name="batchDeleteNotificationTitle">Delete backups</string>
    <string name="batchDeleteBackupsDeleted">Backups deleted:</string>
    <string name="batchDeleteNothingToDelete">No backups to delete</string>
    <string name="enablePackage">Enable</string>
    <string name="enablePackageTitle">Enable for users</string>
    <string name="disablePackage">Disable</string>
    <string name="disablePackageTitle">Disable for users</string>
    <string name="prefs_title">Preferences</string>
    <string name="prefs_service">Service preferences</string>
    <string name="prefs_user">User preferences</string>
    <string name="prefs_theme">Theme</string>
    <string name="prefs_acquireWakelock">Prevent sleep</string>
    <string name="prefs_pathscategory">Custom paths</string>
    <string name="prefs_batchDelete">Delete backups</string>
    <string name="prefs_pathBackupFolder">Backup folder</string>
    <string name="prefs_pathToybox">Busybox folder</string>
    <string name="prefs_oldBackups">Filter backups by age</string>
    <string name="prefs_copySelfApk">Copy own APK</string>
    <string name="prefs_languages">Language</string>
    <string name="prefs_languageSystemDefault">System default</string>
    <string name="prefs_rememberFiltering">Remember sort and filter</string>
    <string name="prefs_followSymlinks">Follow symbolic links</string>
    <string name="prefs_enableSpecialBackups">Enable special backups</string>
    <string name="prefs_disableNotifications">Disable notification</string>
    <string name="prefs_clearCache">Clear app\'s cache</string>
    <string name="prefs_encryption">Encryption</string>
    <string name="prefs_password">Encryption password</string>
    <string name="prefs_backupExternalData">Backup external data</string>
    <string name="prefs_backupDeviceProtectedData">Backup device protected data</string>
    <string name="prefs_summaryBackupDeviceProtectedData">Backs up and restores data that is placed in data/user_de</string>
    <string name="prefs_summaryBackupExternalData">Backs up and restores data that is placed on the external storage (e.g. /storage/emulated/0/Android/data/)</string>
    <string name="prefs_summary_password">Set to empty to disable encryption</string>
    <string name="prefs_summary_encryption">Enable to encrypt data backups</string>
    <string name="prefs_summaryClearCache">Clear application\'s cache before doing data backup</string>
    <string name="prefs_summaryDisableNotifications">OAndBackupX will show no notifications</string>
    <string name="prefs_summaryAcquireWakelock">Acquire a wakelock while batch operations are running to prevent sleep. will speed up backups and restores considerably but will consume more energy</string>
    <string name="prefs_summaryBackupFolder">Path to backup folder. leave blank for default.</string>
    <string name="prefs_summaryToybox">Path to toybox/busybox executable. be sure it\'s correct. leave blank for default.</string>
    <string name="prefs_summaryOldBackups">Filter backups older than value in days. used with the filter \'show old backups\'</string>
    <string name="prefs_summaryCopySelfApk">Place a copy of OAndBackupX in the top level of the backup folder when backed up</string>
    <string name="prefs_summaryRememberFiltering">Saves the chosen sorting and filtering method. Only those marked by a checkbox in the menu are considered.</string>
    <string name="prefs_summaryFollowSymlinks">Always follow symbolic links when copying (cp -L)</string>
    <string name="prefs_summaryQuickReboot">Kills the system_server process to force a restart of user space</string>
    <string name="prefs_summaryBatchDelete">Delete backups of all apps not currently installed</string>
    <string name="sched_title">Scheduling</string>
    <string name="sched_notificationMessage">Scheduled backup</string>
    <string name="sched_interval">Interval in days:</string>
    <string name="sched_hourOfDay">Hour of day:</string>
    <string name="sched_hourOfDay_hint">Between 0 and 23</string>
    <string name="sched_checkbox">Enable</string>
    <string name="sched_updateButton">Update</string>
    <string name="sched_removeButton">Remove</string>
    <string name="sched_activateButton">Start backup now</string>
    <string name="sched_startingbackup">Starting scheduled backup…</string>
    <string name="sched_backupMode">Backup mode:</string>
    <string name="sched_timeLeft">hours until next backup</string>
    <string name="sched_addSchudule">Add schedule</string>
    <string name="sched_customListUpdateButton">Update custom list</string>
    <string name="sched_excludeSystemCheckBox">Exclude system apps</string>
    <string name="sched_warningIntervalZero">Error: interval cannot be 0</string>
    <string name="sched_globalBlacklist">Set global blacklist</string>
    <string name="blacklistDialogTitle">Blacklist</string>
    <string name="spec_accounts">Accounts</string>
    <string name="spec_appwidgets">Application Widgets</string>
    <string name="spec_bluetooth">Bluetooth</string>
    <string name="spec_data">Data Usage and Policy</string>
    <string name="spec_wallpaper">Wallpaper</string>
    <string name="spec_wifiAccessPoints">Wifi Access Points</string>
    <string name="filebrowser_setButton">Set</string>
    <string name="filebrowser_createDirectory">Create folder</string>
    <string name="filebrowser_createDirectoryDlgMsg">Enter name of folder to create</string>
    <string name="filebrowser_createDirectoryError">Could not create the folder: </string>
    <string name="filebrowser_refresh">Refresh</string>
    <string name="filebrowser_contextSetBackupDirectory">Set as backup folder</string>
    <string name="logviewer_message_loading">Loading log file…</string>
    <string name="logviewer_next_lines_button">Next</string>
    <string name="error_creating_notification_channel">Unable to create notification channel</string>
    <string name="error_updating_schedule_mode">Error updating %1$s of schedule %2$d</string>
    <string name="permission_not_granted">Permission to access external storage is required</string>
    <string name="restart_dialog">Application seems to need to be restarted</string>
    <string name="filter_options">Filters:</string>
    <string name="sort_options">Sort by:</string>
    <string name="sortLabel">Label</string>
    <string name="sortPackageName">Package Name</string>
    <string name="app_s_icon">App\'s icon</string>
    <string name="bothBackedUp">APK and data</string>
    <string name="all">All</string>
    <string name="logViewerTitle">View the log</string>
    <string name="ask_for_permissions">ask for permissions</string>
    <string name="systemApp">System app</string>
    <string name="userApp">User app</string>
    <string name="resetFilter">Reset</string>
    <string name="applyFilter">Apply</string>
    <string name="available_actions">Available actions:</string>
    <string name="version_name_title">Version name:</string>
    <string name="backup_mode_title">Backup mode:</string>
    <string name="last_backup_title">Last backup:</string>
    <string name="app_s_type_title">App\'s type:</string>
    <string name="encrypted_data_title">Encrypted data:</string>
    <string name="other_filters_options">Special filters:</string>
    <string name="deleted_backup">Deleted the backup</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_system">System\'s theme</string>
    <string name="empty_filtered_list">The filtered List is empty, therefore setting the filters back to default</string>
</resources>