<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/de_selectAll"
        android:title="@string/de_selectAll"
        android:showAsAction="ifRoom" />
    <group android:id="@+id/filterGroup"
        android:checkableBehavior="single">
        <item android:id="@+id/showAll"
            android:title="@string/showAll" />
        <item android:id="@+id/showOnlyUser"
            android:title="@string/showOnlyUser" />
        <item android:id="@+id/showOnlySystem"
            android:title="@string/showOnlySystem" />
    </group>
    <item android:id="@+id/showNotBackedup"
        android:title="@string/showNotBackedup" />
    <item android:id="@+id/showNotInstalled"
        android:title="@string/showNotInstalled" />
    <item android:id="@+id/showNewAndUpdated"
        android:title="@string/showNewAndUpdated" />
    <item android:id="@+id/showOldBackups"
        android:title="@string/showOldBackups" />
    <item android:id="@+id/showOnlyApkBackedUp"
        android:title="@string/showOnlyApkBackedUp" />
    <item android:id="@+id/showOnlyDataBackedUp"
        android:title="@string/showOnlyDataBackedUp" />
    <item android:id="@+id/showOnlySpecialBackups"
        android:title="@string/showOnlySpecialBackups" />
    <group android:id="@+id/sortGroup"
        android:checkableBehavior="single">
        <item android:id="@+id/sortByLabel"
            android:title="@string/sortByLabel" />
        <item android:id="@+id/sortByPackageName"
            android:title="@string/sortByPackageName" />
    </group>
</menu>
