<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/batchbackup"
        android:id="@+id/backup"
        android:icon="@drawable/ic_backup_white"
        app:showAsAction="always"/>
    <item android:title="@string/batchrestore"
        android:id="@+id/restore"
        android:icon="@drawable/ic_restore_white"
        app:showAsAction="always"/>
    <item android:title="@string/sched_title"
        android:id="@+id/scheduler"
        android:icon="@drawable/ic_scheduler_white"
        app:showAsAction="always"/>
    <!--item android:title="@string/prefs_title"
        android:id="@+id/preferences"
        android:icon="@drawable/ic_settings_white"
        app:showAsAction="ifRoom"/-->
    <item android:id="@+id/tools"
        android:title="@string/tools_title"/>
    <item android:id="@+id/help"
        android:title="@string/help_title" />
</menu>