<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20sp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sched_interval"
            android:layout_weight="0.7"
            android:textSize="14sp"
            android:textColor="#fff"
            android:padding="5sp"
            />
        <EditText
            android:id="@+id/intervalDays"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="0.3"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:text="@string/sched_hourOfDay"
            android:textSize="14sp"
            android:textColor="#fff"
            android:padding="5sp"
            />
        <EditText
            android:id="@+id/timeOfDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:inputType="number"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/sched_backupMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sched_backupMode"
        android:textSize="14sp"
        android:textColor="#fff"
        android:padding="5sp"
        />
    <Spinner
        android:id="@+id/sched_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Spinner
        android:id="@+id/sched_spinnerSubModes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/sched_timeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:textColor="#fff"
        android:padding="5sp"
        />
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sched_checkbox"
        android:onClick="checkboxOnClick"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sched_updateButton"
            android:textAlignment="center"
            />
        <Button
            android:id="@+id/removeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sched_removeButton"
            android:textAlignment="center"
            />
    </LinearLayout>
    <Button
        android:id="@+id/activateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sched_activateButton"
        android:textAlignment="center"
        />
</LinearLayout>
